IMP: update docs

--- a/_test_/index.njk
+++ b/_test_/index.njk
@@ -8,6 +8,6 @@
     <link href="https://unpkg.com/fylgja/fylgja.css" rel="stylesheet">
 </head>
 <body>
-    {% lucide "air-vent" %}
+    {% lucide "shopping-cart", { "size": "32" } %}
 </body>
 </html>
